--- a/src/assets/html/main.html
+++ b/src/assets/html/main.html
@@ -94,6 +94,19 @@
       </div>
     </main>
 
+    <button class="btn btn-warning" id="editBtn" style="display: none">
+      Edit
+    </button>
+    <button class="btn btn-danger" id="deleteBtn" style="display: none">
+      Delete
+    </button>
+    <button class="btn btn-primary" id="createBtn" style="display: none">
+      Create
+    </button>
+    <button class="btn btn-danger" id="deleteAllBtn" style="display: none">
+      Delete All
+    </button>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
@@ -101,7 +114,6 @@
     ></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="../js/main.js"></script>
+    <script src="../js/header.js"></script>
   </body>
-
-  <script src="../js/header.js"></script>
 </html>
