--- a/src/assets/html/community.html
+++ b/src/assets/html/community.html
@@ -66,7 +66,7 @@
         <h2
           class="text-success mb-4 d-flex justify-content-between align-items-center"
         >
-          <span>전체 편의점 리뷰</span>
+          <span>전체 책리뷰</span>
           <button
             id="submitPostBtnReview"
             type="button"
