--- a/src/assets/html/order.html
+++ b/src/assets/html/order.html
@@ -1,259 +1,204 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html>
   <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
-    <link rel="icon" href="./images/favicon.ico" type="image/x-icon" />
-    <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon" />
-    <!-- Bootstrap CSS -->
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Responsive Checkout Form</title>
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-      integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
       crossorigin="anonymous"
     />
-
-    <!-- Font Awesome CSS -->
-    <link
-      href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-      rel="stylesheet"
-    />
-    <link href="./css/mystyle.css" rel="stylesheet" />
-    <title>스파르타 쇼핑몰 | 주문</title>
-
-    <style>
-      .card {
-        cursor: pointer;
-      }
-    </style>
+    <link rel="stylesheet" href="../css/order.css" />
   </head>
-
   <body>
-    <nav
-      class="navbar navbar-expand-sm navbar-dark bg-sparta justify-content-end"
+    <header
+      class="p-1 d-flex flex-wrap align-items-center justify-content-md-between border-bottom border-success"
     >
-      <a class="navbar-brand" href="./html/goods.html">
-        <img
-          src="./images/logo_big_tr.png"
-          width="30"
-          height="30"
-          class="d-inline-block align-top"
-          alt=""
-        />
-        스파르타 쇼핑몰
-      </a>
-      <button
-        class="navbar-toggler ml-auto"
-        type="button"
-        data-toggle="collapse"
-        data-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent"
-        aria-expanded="true"
-        aria-label="Toggle navigation"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div
-        class="navbar-collapse collapse flex-grow-0 ml-auto"
-        id="navbarSupportedContent"
-      >
-        <ul class="navbar-nav mr-auto text-right">
-          <li class="nav-item" id="link-cart">
-            <a class="nav-link" href="/./html/cart.html">
-              장바구니<i
-                class="fa fa-shopping-cart ml-2"
-                aria-hidden="true"
-              ></i>
-            </a>
-          </li>
-          <li class="nav-item" id="link-logout">
-            <a class="nav-link" data-toggle="modal" data-target="#signOutModal">
-              로그아웃<i class="fa fa-sign-out ml-2" aria-hidden="true"></i>
-            </a>
-            <div
-              class="modal text-left"
-              id="signOutModal"
-              tabindex="-1"
-              role="dialog"
-              aria-labelledby="signOutModalLabel"
-              aria-hidden="true"
-            >
-              <div class="modal-dialog" role="document">
-                <div class="modal-content">
-                  <div class="modal-header">
-                    <h5 class="modal-title" id="signOutModalLabel">로그아웃</h5>
-                    <button
-                      type="button"
-                      class="close"
-                      data-dismiss="modal"
-                      aria-label="Close"
-                    >
-                      <span aria-hidden="true">&times;</span>
-                    </button>
+      <div class="ms-5 col-md-3">
+        <a href="main.html" class="text-decoration-none title text-success">
+          <p class="fs-30" style="font-weight: 700">
+            &#128218;ReadingRocket&#128640;
+          </p>
+        </a>
+      </div>
+      <!-- Navbar added to the header -->
+      <nav class="navbar navbar-expand-md navbar-light">
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link text-success" href="./community.html"
+                >Community</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-success" href="./products.html"
+                >Products</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-success" href="./cart.html">Cart</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+      <div class="col-md-3 text-end">
+        <div class="me-5 col-md-3 text-end" id="loginContainer">
+          <!-- 로그인 또는 로그아웃 버튼이 여기에 동적으로 추가. -->
+        </div>
+      </div>
+    </header>
+    <h2>Checkout Form</h2>
+    <div class="row">
+      <div class="col-75">
+        <div class="container">
+          <form action="/action_page.php">
+            <div class="row">
+              <div class="col-50">
+                <h3>Shipping Address</h3>
+                <label for="fname"><i class="fa fa-user"></i> Full Name</label>
+                <input
+                  type="text"
+                  id="fname"
+                  name="firstname"
+                  placeholder="Faraz"
+                />
+                <label for="email"><i class="fa fa-envelope"></i> Email</label>
+                <input
+                  type="text"
+                  id="email"
+                  name="email"
+                  placeholder="codewithfaraz@example.com"
+                />
+                <label for="adr"
+                  ><i class="fa fa-address-card-o"></i> Address</label
+                >
+                <input
+                  type="text"
+                  id="adr"
+                  name="address"
+                  placeholder="Mira Bhayandar Road"
+                />
+                <label for="city"><i class="fa fa-institution"></i> City</label>
+                <input type="text" id="city" name="city" placeholder="Mumbai" />
+
+                <div class="row">
+                  <div class="col-50">
+                    <label for="state">State</label>
+                    <input
+                      type="text"
+                      id="state"
+                      name="state"
+                      placeholder="MH"
+                    />
                   </div>
-                  <div class="modal-body">정말로 로그아웃 하시겠습니까?</div>
-                  <div class="modal-footer">
-                    <button
-                      type="button"
-                      class="btn btn-outline-sparta"
-                      data-dismiss="modal"
-                    >
-                      취소
-                    </button>
-                    <button
-                      type="button"
-                      class="btn btn-sparta"
-                      onclick="signOut()"
-                    >
-                      로그아웃하기
-                    </button>
+                  <div class="col-50">
+                    <label for="zip">Zip</label>
+                    <input
+                      type="text"
+                      id="zip"
+                      name="zip"
+                      placeholder="400001"
+                    />
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-50">
+                <h3>Payment</h3>
+                <label for="fname">Accepted Cards</label>
+                <div class="icon-container">
+                  <i class="fa fa-cc-visa" style="color: navy"></i>
+                  <i class="fa fa-cc-amex" style="color: blue"></i>
+                  <i class="fa fa-cc-mastercard" style="color: red"></i>
+                  <i class="fa fa-cc-discover" style="color: orange"></i>
+                </div>
+                <label for="cname">Name on Card</label>
+                <input
+                  type="text"
+                  id="cname"
+                  name="cardname"
+                  placeholder="Faraz"
+                />
+                <label for="ccnum">Credit card number</label>
+                <input
+                  type="text"
+                  id="ccnum"
+                  name="cardnumber"
+                  placeholder="1111-2222-3333-4444"
+                />
+                <label for="expmonth">Exp Month</label>
+                <input
+                  type="text"
+                  id="expmonth"
+                  name="expmonth"
+                  placeholder="December"
+                />
+                <div class="row">
+                  <div class="col-50">
+                    <label for="expyear">Exp Year</label>
+                    <input
+                      type="text"
+                      id="expyear"
+                      name="expyear"
+                      placeholder="2027"
+                    />
+                  </div>
+                  <div class="col-50">
+                    <label for="cvv">CVV</label>
+                    <input type="text" id="cvv" name="cvv" placeholder="123" />
                   </div>
                 </div>
               </div>
             </div>
-          </li>
-        </ul>
+            <input
+              type="submit"
+              value="Continue to checkout"
+              class="btn btn-success btn-lg"
+            />
+          </form>
+        </div>
       </div>
-    </nav>
-    <div class="wrap">
-      <div class="mb-3">
-        <h4><i class="fa fa-truck mr-1" aria-hidden="true"></i>배송지 입력</h4>
-      </div>
-      <div>
-        <div class="form-group">
-          <label for="exampleInputName">받는 사람</label>
-          <input
-            type="text"
-            class="form-control"
-            id="exampleInputName"
-            placeholder="홍길동"
-          />
-        </div>
-
-        <div class="form-group">
-          <label for="exampleInputMobile">연락처</label>
-          <input
-            type="text"
-            class="form-control"
-            id="exampleInputMobile"
-            placeholder="010-xxx-xxxx"
-          />
-        </div>
-
-        <div class="form-group">
-          <label for="exampleInputAddress1">주소</label>
-          <input
-            type="text"
-            class="form-control"
-            id="exampleInputAddress1"
-            placeholder="도로명, 건물명, 번지 검색"
-          />
-          <input
-            type="text"
-            class="form-control mt-2"
-            id="exampleInputAddress2"
-            placeholder="상세주소"
-          />
-        </div>
-
-        <button
-          type="button"
-          class="btn btn-sparta btn-block"
-          data-toggle="modal"
-          data-target="#orderModal"
-          id="btnOrder"
-        >
-          $0.20 결제
-        </button>
-        <div
-          class="modal text-left"
-          id="orderModal"
-          tabindex="-1"
-          role="dialog"
-          aria-labelledby="orderModalLabel"
-          aria-hidden="true"
-        >
-          <div class="modal-dialog" role="document">
-            <div class="modal-content">
-              <div class="modal-header">
-                <h5 class="modal-title" id="orderModalLabel">결제완료</h5>
-                <button
-                  type="button"
-                  class="close"
-                  data-dismiss="modal"
-                  aria-label="Close"
-                >
-                  <span aria-hidden="true">&times;</span>
-                </button>
-              </div>
-              <div class="modal-body">
-                <span id="nickname"></span>님, 주문해주셔서 감사합니다 :)
-              </div>
-              <div class="modal-footer">
-                <button
-                  type="button"
-                  class="btn btn-outline-sparta btn-confirm"
-                  data-dismiss="modal"
-                >
-                  확인
-                </button>
-              </div>
-            </div>
-          </div>
+      <div class="col-25">
+        <div class="container">
+          <h4>
+            Cart
+            <span class="price" style="color: black"
+              ><i class="fa fa-shopping-cart"></i> <b>4</b></span
+            >
+          </h4>
+          <p><a href="#">Item 1</a> <span class="price">$105</span></p>
+          <p><a href="#">Item 2</a> <span class="price">$95</span></p>
+          <p><a href="#">Item 3</a> <span class="price">$100</span></p>
+          <p><a href="#">Item 4</a> <span class="price">$50</span></p>
+          <hr />
+          <p>
+            Total <span class="price" style="color: black"><b>$350</b></span>
+          </p>
         </div>
       </div>
     </div>
-
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script
-      src="https://code.jquery.com/jquery-3.5.1.js"
-      integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
       crossorigin="anonymous"
     ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-      integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
-      integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
-      crossorigin="anonymous"
-    ></script>
-    <script src="https://cdn.socket.io/socket.io-3.0.1.min.js"></script>
-    <script src="/api.js"></script>
 
-    <script>
-      $(document).ready(function () {
-        getSelf(function (user) {
-          const order = JSON.parse(sessionStorage.getItem("ordered"));
-          $("#nickname").text(user.nickname);
-          $("#btnOrder")
-            .text(
-              `$${number2decimals(
-                order.reduce(
-                  (s, o) => s + Number(o.goods.price) * o.quantity,
-                  0
-                )
-              )} 결제`
-            )
-            .click(function () {
-              postOrder(user, order);
-            });
-          $(".btn-confirm").click(function () {
-            location.href = "./html/goods.html";
-          });
-        });
-      });
-
-      function number2decimals(num) {
-        return (Math.round(num * 100) / 100).toFixed(2);
-      }
-    </script>
+    <script src="../js/header.js"></script>
   </body>
 </html>
