--- a/src/assets/html/products.html
+++ b/src/assets/html/products.html
@@ -118,7 +118,7 @@
       crossorigin="anonymous"
     ></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="../js/products.js"></script>
+    <script type="module" src="../js/products.js"></script>
   </body>
 
   <script src="../js/header.js"></script>
