products main frontend done

--- a/src/assets/html/main.html
+++ b/src/assets/html/main.html
@@ -85,14 +85,14 @@
             </button>
           </div>
           <button
-            class="btn btn-primary mx-2"
+            class="btn btn-outline-success mx-2"
             id="createBtn"
             style="display: none"
           >
             Create
           </button>
           <button
-            class="btn btn-danger"
+            class="btn btn-outline-success"
             id="deleteAllBtn"
             style="display: none"
           >
