--- a/src/assets/html/products.html
+++ b/src/assets/html/products.html
@@ -10,12 +10,6 @@
       integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
       crossorigin="anonymous"
     />
-    <style>
-      #searchResultsContainer,
-      #productCardsContainer {
-        display: none;
-      }
-    </style>
   </head>
 
   <body>
@@ -90,6 +84,20 @@
               검색
             </button>
           </div>
+          <button
+            class="btn btn-outline-success mx-2"
+            id="createBtn"
+            style="display: none"
+          >
+            Create
+          </button>
+          <button
+            class="btn btn-outline-success"
+            id="deleteAllBtn"
+            style="display: none"
+          >
+            Delete All
+          </button>
         </div>
       </div>
 
