--- a/src/assets/html/book.detail.html
+++ b/src/assets/html/book.detail.html
@@ -5,7 +5,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Product Details</title>
-  <link rel="stylesheet" href="">
   <link rel="stylesheet" href="../css/detail.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
@@ -76,10 +75,14 @@
        </div>
       <form class ="second-area">
         <div class="my-2">
-          <label required for="quantity">평점:</label>
-          <input required type="number" id="quantity" name="quantity" value="1" min="1" max="5">
-            <button type="button" class="btn btn-success me-2" id="addToCartBtn">수정</button>
-            <button type="button" class="btn btn-success" id="directPurchaseBtn">삭제</button>
+          <div>
+            <label required for="quantity">평점:</label>
+            <input required type="number" id="quantity" name="quantity" value="1" min="1" max="5">
+          </div>
+          <div class = "review-revise-btn">
+            <button type="button" class="btn btn-success" >review 수정</button>
+            <button type="button" class="btn btn-success" >review 삭제</button>
+          </div>
         </div>
         <div class="review-wr">
             <textarea   type="text" name="quantity" placeholder="리뷰를 작성해주세요"> </textarea>
