--- a/src/assets/html/specificBookstore.html
+++ b/src/assets/html/specificBookstore.html
@@ -126,7 +126,7 @@
       crossorigin="anonymous"
     ></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script type="module" src="../js/products.js"></script>
+    <script type="module" src="../js/specificBookstore.js"></script>
   </body>
 
   <script src="../js/header.js"></script>
