--- a/src/assets/html/products.html
+++ b/src/assets/html/products.html
@@ -10,6 +10,25 @@
       integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
       crossorigin="anonymous"
     />
+    <style>
+      body {
+        background-color: #f8f9fa;
+      }
+
+      main {
+        padding: 30px 0;
+      }
+
+      .search-bar {
+        margin-bottom: 20px;
+      }
+
+      #searchButton,
+      #createBtn,
+      #deleteAllBtn {
+        margin-top: 8px;
+      }
+    </style>
   </head>
 
   <body>
@@ -62,9 +81,8 @@
     </header>
 
     <main>
-      <div class="container my-5 text-center">
-        <h2 class="text-success mb-4">전체 상품</h2>
-        <!-- Center-aligned Search bar -->
+      <div class="container text-center search-bar">
+        <h2 class="text-success mb-4">12월은 독서의 계절 </h2>
         <div
           class="col-md-6 d-flex justify-content-center align-items-center mx-auto"
         >
@@ -72,7 +90,7 @@
             <input
               type="text"
               class="form-control"
-              placeholder="검색어를 입력하세요"
+              placeholder="책 제목을 입력하세요"
               aria-label="검색어 입력"
               aria-describedby="searchButton"
             />
@@ -101,9 +119,12 @@
         </div>
       </div>
 
-      <!-- All Products Section -->
+      <!-- 검색 결과 컨테이너 -->
       <div class="container">
-        <h2 class="text-success mb-4">전체 상품 목록</h2>
+        <div class="row row-cols-1 g-4" id="searchResultsContainer"></div>
+
+        <!-- 전체 도서 컨테이너-->
+        <h2 class="text-success my-4">전체 도서 목록</h2>
         <div
           class="row row-cols-1 row-cols-md-3 g-4"
           id="productCardsContainer"
@@ -118,7 +139,6 @@
     ></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script type="module" src="../js/products.js"></script>
+    <script src="../js/header.js"></script>
   </body>
-
-  <script src="../js/header.js"></script>
 </html>
