--- a/src/assets/html/myPage.html
+++ b/src/assets/html/myPage.html
@@ -54,7 +54,13 @@
               <h3 class="text-success">사용자 세부 정보</h3>
                 <p id="userName"><strong>이름:</strong> </p>
                 <p id="userEmail"><strong>Email:</strong> </p>
-                <!-- 기타 사용자 정보를 여기에 추가하세요 -->
+                <p id="point"><strong>Point:</strong> </p>
+                <button class="btn btn-success" onclick="window.location.href='modifyProfile.html'">수정하기</button>
+                <button class="btn btn-success" onclick="window.location.href='modifyProfile.html'">탈퇴하기</button>
+            </div>
+             <!-- 주문 세부 정보 -->
+             <div>
+              <h3 class="text-success">주문 세부 정보</h3>
                 <button class="btn btn-success" onclick="window.location.href='modifyProfile.html'">수정하기</button>
             </div>
     </main>
