--- a/src/assets/html/book.detail.html
+++ b/src/assets/html/book.detail.html
@@ -16,7 +16,6 @@
         margin-bottom: 20px;
       }
 
-      /* 스타일 추가 */
       .book-info h2,
       .book-info div {
         margin: 0;
@@ -25,6 +24,24 @@
 
       .buy-button {
         margin-top: 20px;
+      }
+
+      .review-revise-btn button {
+        margin-right: 5px;
+      }
+
+      .review-wr {
+        margin-top: 10px;
+      }
+
+      .modal-dialog {
+        max-width: 400px;
+      }
+
+      .star-rating {
+        display: inline-block;
+        font-size: 24px;
+        color: #ffd700;
       }
     </style>
   </head>
@@ -40,7 +57,6 @@
           </p>
         </a>
       </div>
-      <!-- Navbar added to the header -->
       <nav class="navbar navbar-expand-md navbar-light">
         <button
           class="navbar-toggler"
@@ -117,18 +133,20 @@
         <!-- 리뷰 및 관련 기능 -->
         <form class="second-area">
           <div class="my-2">
-            <div>
-              <label for="quantity">평점:</label>
-              <input
-                required
-                type="number"
-                id="quantity"
-                name="quantity"
-                value="1"
-                min="1"
-                max="5"
-              />
+            <!-- 별점 선택 부분 -->
+            <div class="mb-3">
+              <label for="starRating" class="form-label">별점:</label>
+              <!-- Use JavaScript to allow users to give a star rating -->
+              <select id="starRating" name="starRating" class="form-select">
+                <option value="1">⭐</option>
+                <option value="2">⭐⭐</option>
+                <option value="3">⭐⭐⭐</option>
+                <option value="4">⭐⭐⭐⭐</option>
+                <option value="5">⭐⭐⭐⭐⭐</option>
+              </select>
             </div>
+
+            <!-- 리뷰 수정 및 삭제 버튼 -->
             <div class="review-revise-btn">
               <button type="button" class="btn btn-success" id="editReviewBtn">
                 리뷰 수정
@@ -142,6 +160,8 @@
               </button>
             </div>
           </div>
+
+          <!-- 리뷰 작성 부분 -->
           <div class="review-wr">
             <textarea
               type="text"
@@ -152,6 +172,7 @@
               type="button"
               class="btn btn-success me-2"
               id="addReviewBtn"
+              onclick="addReview()"
             >
               리뷰 작성
             </button>
@@ -197,14 +218,12 @@
         </div>
       </div>
     </main>
-
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
       crossorigin="anonymous"
     ></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-
     <script type="module" src="../js/book.detail.js"></script>
     <script src="../js/header.js"></script>
   </body>
