--- a/src/assets/html/login.html
+++ b/src/assets/html/login.html
@@ -104,6 +104,11 @@
             </div>
           </div>
           <div class="mt-3">
+            <button id="kakao-login-btn" class="btn btn-block btn-warning">
+              카카오로 로그인
+            </button>
+          </div>
+          <!-- <div class="mt-3">
             <button id="kakao-client-login-btn" class="btn btn-block btn-warning">
               카카오로 고객님으로 로그인
             </button>
@@ -112,7 +117,7 @@
             <button id="kakao-owner-login-btn" class="btn btn-block btn-warning">
               카카오로 사장님으로 로그인
             </button>
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
