detail product frontend done

--- a/src/assets/html/book.detail.html
+++ b/src/assets/html/book.detail.html
@@ -100,6 +100,7 @@
           <div class="box">
             <h3 class="text-success mb-4">상세보기</h3>
             <div id="productDetail" class="row">
+              <input type="hidden" id="productIdInput" value="상품ID" />
               <!-- Product details go here -->
             </div>
           </div>
@@ -144,20 +145,6 @@
                 <option value="4">⭐⭐⭐⭐</option>
                 <option value="5">⭐⭐⭐⭐⭐</option>
               </select>
-            </div>
-
-            <!-- 리뷰 수정 및 삭제 버튼 -->
-            <div class="review-revise-btn">
-              <button type="button" class="btn btn-success" id="editReviewBtn">
-                리뷰 수정
-              </button>
-              <button
-                type="button"
-                class="btn btn-success"
-                id="deleteReviewBtn"
-              >
-                리뷰 삭제
-              </button>
             </div>
           </div>
 
