--- a/src/assets/html/book.detail.html
+++ b/src/assets/html/book.detail.html
@@ -99,9 +99,8 @@
       <div class="container my-5">
         <div class="first-area">
           <div class="box">
-            <h3 class="text-success mb-4">상세보기</h3>
-            <div id="productDetail" class="row">
-              <input type="hidden" id="productIdInput" value="상품ID" />
+            <div id="productDetail">
+              <!--  <input type="hidden" id="productIdInput" value="상품ID" /> -->
               <!-- Product details go here -->
             </div>
           </div>
