--- a/src/assets/html/community.html
+++ b/src/assets/html/community.html
@@ -7,21 +7,18 @@
       property="og:url"
       content="https://grayson-choi.github.io/advent_calendar/"
     />
-    <meta
-      property="og:title"
-      content="스파르타코딩클럽 크리스마스 디데이 캘린더"
-    />
+    <meta property="og:title" content="책추천 크리스마스 디데이 캘린더" />
     <meta property="og:image" content="../img/OGimage.png" />
     <meta
       property="og:description"
-      content="크리스마스까지 하루가 기다려지는 즐거움, 크리스마스 디데이 캘린더를 함께 만들어봐요!"
+      content="크리스마스까지 하루가 기다려지는 즐거움, 책 한권 어떠세요?"
     />
     <meta property="og:site_name" content="SCC Advent Calendar" />
     <meta property="og:locale" content="en_US" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
 
-    <title>Sparta Advend Calendar 2023</title>
+    <title>Reading Rocket Advend Calendar 2023</title>
     <link rel="stylesheet" href="../css/community.css" />
     <link rel="stylesheet" href="../css/snow.css" />
     <link rel="stylesheet" href="../css/share.css" />
@@ -306,12 +303,7 @@
       </div>
     </section>
     <footer>
-      <div class="flex-row">
-        <button id="shareButton">공유하기</button>
-        <button id="studyButton">
-          <a href="https://spartacodingclub.kr/">만들러 가기</a>
-        </button>
-      </div>
+      <div class="flex-row"></div>
       <div class="flex-row">
         <audio
           class="bgm"
@@ -322,10 +314,14 @@
         <div class="sound"></div>
         <div class="sound stop"></div>
       </div>
-      <p class="copyright">Copyright ⓒ TeamSparta All rights reserved. ☃️</p>
     </footer>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+      crossorigin="anonymous"
+    ></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="../js/community.js"></script>
-    <script src="../js/share.js"></script>
     <script src="../js/music.js"></script>
     <script src="../js/countdown.js"></script>
   </body>
