--- a/src/assets/html/createBook.html
+++ b/src/assets/html/createBook.html
@@ -132,6 +132,7 @@
       crossorigin="anonymous"
     ></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="../js/header.js"></script>
     <script type="module" src="../js/createBook.js"></script>
   </body>
 </html>
