--- a/src/assets/html/createStore.html
+++ b/src/assets/html/createStore.html
@@ -129,7 +129,7 @@
       crossorigin="anonymous"
     ></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-
+    <script src="../js/header.js"></script>
     <script defer src="../js/createStore.js"></script>
   </body>
 </html>
