--- a/src/assets/html/order.html
+++ b/src/assets/html/order.html
@@ -1,6 +1,7 @@
 <!doctype html>
-<html>
+<html lang="en">
   <head>
+    <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Responsive Checkout Form</title>
     <link
@@ -94,6 +95,7 @@
               <input
                 type="text"
                 id="adr"
+                class="address"
                 name="address"
                 placeholder="주소를 작성해주세요"
               />
