order detail debug done

--- a/src/assets/html/owner.order.html
+++ b/src/assets/html/owner.order.html
@@ -65,7 +65,7 @@
       <!-- Display Owner Orders -->
       <div>
         <ul id="ownerOrdersList" class="list-group">
-          <!-- Order items will be added dynamically here -->
+          <!-- Your list items will be added here -->
         </ul>
       </div>
       <div
